--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Wed Jul 12 14:59:18 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=1;0;1;1;1;0;1;4;0;3;1;0;1;1;0;0;0;
-run=17
-passedList=2;4;2;2;3;4;3;4;6;4;3;7;2;5;3;6;3;
+#Wed Jul 12 15:15:30 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=1;0;1;1;1;0;1;4;0;3;1;0;1;1;0;0;0;1;1;0;
+run=20
+passedList=2;4;2;2;3;4;3;4;6;4;3;7;2;5;3;6;3;2;2;3;
