--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Wed Jul 12 16:34:52 CDT 2017
-skippedList=0;0;0;0;
-failedList=1;0;1;4;
-run=4
-passedList=2;2;2;2;
+#Thu Jul 13 11:07:39 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;
+failedList=1;0;1;4;0;2;2;1;0;2;
+run=11
+passedList=2;2;2;2;0;1;1;2;4;2;
