--- a/Configuration/Object_Repository.properties
+++ b/Configuration/Object_Repository.properties
@@ -31,6 +31,7 @@ VcenterHost=IO:bc6952a30f65f200d6254c6be1050e67
 ESXIHOST=IO:3d68d644134fb600aee43d7ed144b06d
 
 #PrimaryCloudLink=OpenStack
+SelectClusterid=sys_display.IO:ef95dc9b0fe97200d6254c6be1050e4a
 SelectCulsterxpath=.//*[@id='lookup.IO:ef95dc9b0fe97200d6254c6be1050e4a']
 #SelectClusterText=OpenStack-AIMS-CNET-01
 SelectServerXpath=//a[@id='lookup.IO:92e0e0570f2d7200d6254c6be1050e8d']
