--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Thu Jul 13 12:40:17 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=1;0;1;4;0;2;2;1;0;2;0;0;9;5;0;5;5;5;2;5;0;1;0;0;0;8;
-run=25
-passedList=2;2;2;2;0;1;1;2;4;2;0;0;3;3;0;3;3;3;4;3;5;4;5;8;6;2;
+#Fri Jul 14 14:16:37 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;
+failedList=5;0;0;4;0;0;0;32;32;0;
+run=10
+passedList=5;10;0;3;7;0;0;2;2;33;
