--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Fri Jul 14 14:16:37 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;
-failedList=5;0;0;4;0;0;0;32;32;0;
-run=10
-passedList=5;10;0;3;7;0;0;2;2;33;
+#Mon Jul 17 14:27:28 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;
+failedList=31;31;1;1;0;2;1;0;
+run=8
+passedList=2;2;2;2;4;2;3;4;
