--- a/Configuration/Object_Repository.properties
+++ b/Configuration/Object_Repository.properties
@@ -67,14 +67,20 @@ ApprovedID=sc_req_item.approval
 UpdateButtonID=sysverb_update
 
 #Approvaltab
-ApprovalTabxpath=//div[@id='tabs2_list']/span[2]/span/span[2]
+ApprovalTabxpath=//*[@id="tabs2_list"]/span[3]/span
+#//div[@id='tabs2_list']/span[2]/span/span[2]
 ApprovalStatusLink=approval
 ApproveButtonXpath=//div[@id='context_list_rowsc_req_item.sysapproval_approver.sysapproval']/div[11]
 
+#ApprovalNewTab
+Approvalxpath=//div[@id='tabs2_list']/span[3]/span/span[2]
+Approvallink=approval
+Approvaldropdown=sysapproval_approver.state
+UpdateXpath=//form[@id='sysapproval_approver.do']/div/button
 
 #ShowWorkFlow
 showworkflowID=f590dc04c0a8016400eccedd5249fdb2
-UpdateServerxpath=//a[contains(text(),'Update a Server')]
+UpdateServerxpath=.//*[@id='tab2']
 RefreshButtonXpath=//div[4]/table/tbody/tr/td/div/div/div[2]/div
 EndButtonXpath=//span[contains(.,'End')]
 
