--- a/Configuration/Object_Repository.properties
+++ b/Configuration/Object_Repository.properties
@@ -81,8 +81,8 @@ UpdateXpath=//form[@id='sysapproval_approver.do']/div/button
 
 #ShowWorkFlow
 showworkflowID=f590dc04c0a8016400eccedd5249fdb2
-UpdateServerxpath=.//*[@id='tab2']
-RefreshButtonXpath=//div[4]/table/tbody/tr/td/div/div/div[2]/div
+UpdateServerxpath=//a[contains(text(),'Update a Server')]
+RefreshButtonXpath=(//div[@id='tool_banner']/div/div[2]/div)[3]
 EndButtonXpath=//span[contains(.,'End')]
 
 #cmdb_ci_server.list
