--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Fri Jul 21 13:20:11 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;2;2;0;0;0;0;0;0;0;0;0;0;
-failedList=31;0;29;0;2;0;1;0;0;0;31;0;64;0;26;2;0;0;0;31;29;0;2;0;7;10;10;9;
-run=28
-passedList=2;0;4;0;2;0;2;3;9;33;2;0;4;0;7;31;8;1;3;3;5;0;24;0;5;3;2;2;
+#Fri Jul 21 15:05:49 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;2;2;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=31;0;29;0;2;0;1;0;0;0;31;0;64;0;26;2;0;0;0;31;29;0;2;0;7;10;10;9;0;12;6;5;0;5;
+run=34
+passedList=2;0;4;0;2;0;2;3;9;33;2;0;4;0;7;31;8;1;3;3;5;0;24;0;5;3;2;2;0;2;8;5;10;5;
