--- a/Configuration/Object_Repository.properties
+++ b/Configuration/Object_Repository.properties
@@ -50,6 +50,16 @@ SizeID=IO:dbf2101b0fe97200d6254c6be1050edd
 SizeUnitID=IO:0213581b0fe97200d6254c6be1050e4d
 
 
+#ServerAccessAndPermissions
+LockID=IO:3987d81f0fe97200d6254c6be1050ecc_unlock
+LockSearchID=lookup.IO:3987d81f0fe97200d6254c6be1050ecc
+SearchUserXpath=//span[@id='sys_user_hide_search']/div/div/input
+UserXpathSelect=//td[3]/a
+LockButtonid=IO:3987d81f0fe97200d6254c6be1050ecc_lock
+ServiceAccountid=IO:8af7d81f0fe97200d6254c6be1050e63
+PCIComplianceid=IO:7e38905f0fe97200d6254c6be1050e09
+
+
 infoDropdownid=user_info_dropdown
 ImpersonateUserLink=Impersonate User
 SearchUserButtonXpath=.//*[@id='s2id_autogen1']/a/span[2]/b
@@ -82,6 +92,7 @@ UpdateXpath=//form[@id='sysapproval_approver.do']/div/button
 #ShowWorkFlow
 showworkflowID=f590dc04c0a8016400eccedd5249fdb2
 UpdateServerxpath=//a[contains(text(),'Update a Server')]
+UpdateServerID=tab2
 RefreshButtonXpath=(//div[@id='tool_banner']/div/div[2]/div)[3]
 EndButtonXpath=//span[contains(.,'End')]
 
