--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Fri Jul 21 16:49:17 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;2;2;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=31;0;29;0;2;0;1;0;0;0;31;0;64;0;26;2;0;0;0;31;29;0;2;0;7;10;10;9;0;12;6;5;0;5;1;
-run=35
-passedList=2;0;4;0;2;0;2;3;9;33;2;0;4;0;7;31;8;1;3;3;5;0;24;0;5;3;2;2;0;2;8;5;10;5;25;
+#Mon Jul 24 09:39:29 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=9;23;21;0;32;32;7;0;8;16;0;0;0;0;0;
+run=15
+passedList=25;11;13;0;2;2;3;10;2;18;38;38;38;34;10;
