--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Mon Jul 24 13:39:19 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=9;23;21;0;32;32;7;0;8;16;0;0;0;0;0;0;2;0;24;8;15;15;0;
-run=24
-passedList=25;11;13;0;2;2;3;10;2;18;38;38;38;34;10;10;3;4;9;18;3;3;11;
+#Mon Jul 24 14:37:15 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=9;23;21;0;32;32;7;0;8;16;0;0;0;0;0;0;2;0;24;8;15;15;0;0;0;
+run=25
+passedList=25;11;13;0;2;2;3;10;2;18;38;38;38;34;10;10;3;4;9;18;3;3;11;0;9;
