--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Mon Jul 24 15:04:10 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=9;23;21;0;32;32;7;0;8;16;0;0;0;0;0;0;2;0;24;8;15;15;0;0;0;5;1;
-run=27
-passedList=25;11;13;0;2;2;3;10;2;18;38;38;38;34;10;10;3;4;9;18;3;3;11;0;9;6;10;
+#Mon Jul 24 15:30:31 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=9;23;21;0;32;32;7;0;8;16;0;0;0;0;0;0;2;0;24;8;15;15;0;0;0;5;1;0;
+run=28
+passedList=25;11;13;0;2;2;3;10;2;18;38;38;38;34;10;10;3;4;9;18;3;3;11;0;9;6;10;12;
