--- a/ATUReports/Results/Settings.properties
+++ b/ATUReports/Results/Settings.properties
@@ -1,6 +1,6 @@
 #
-#Tue Jul 25 15:24:49 CDT 2017
-skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
-failedList=4;1;4;0;0;4;2;0;1;9;9;0;0;1;0;0;0;9;0;6;0;
-run=21
-passedList=2;2;2;6;6;6;5;5;9;2;2;3;3;9;0;3;3;1;10;3;9;
+#Tue Jul 25 16:41:11 CDT 2017
+skippedList=0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;0;
+failedList=4;1;4;0;0;4;2;0;1;9;9;0;0;1;0;0;0;9;0;6;0;2;
+run=22
+passedList=2;2;2;6;6;6;5;5;9;2;2;3;3;9;0;3;3;1;10;3;9;8;
