--- a/Configuration/Object_Repository.properties
+++ b/Configuration/Object_Repository.properties
@@ -77,7 +77,7 @@ ApprovedID=sc_req_item.approval
 UpdateButtonID=sysverb_update
 
 #Approvaltab
-ApprovalTabxpath=.//*[@id='tabs2_list']/span[3]/span
+ApprovalTabxpath=//div[@id='tabs2_list']/span[2]/span/span[2]
 #//div[@id='tabs2_list']/span[2]/span/span[2]
 ApprovalStatusLink=approval
 ApproveButtonXpath=//div[@id='context_list_rowsc_req_item.sysapproval_approver.sysapproval']/div[11]
